Fixed z-index and turned divs into links

--- a/src/stylesheets/Header.css
+++ b/src/stylesheets/Header.css
@@ -8,7 +8,7 @@
 
 .header{
     background-color: var(--white);
-    z-index: 1;
+    z-index: 3;
     display: flex;
     height: 10vh;
     align-items: center;
